--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libyang3-sys/libyang"]
 	path = libyang3-sys/libyang
-	url = https://github.com/CESNET/libyang.git
+	url = https://github.com/james-iceb/libyang.git
